--- a/pages/home.htm
+++ b/pages/home.htm
@@ -3,24 +3,75 @@ url = "/"
 layout = "default"
 is_hidden = 0
 
-[carousel]
-id = 1
+[imageGallery]
+galleryId = 1
+mainThumbHeight = 100
+mainThumbWidth = 150
+resizer = "crop"
+mode = "lg-slide"
+speed = 900
+height = "100%"
+width = "100%"
+startClass = "lg-start-zoom"
+backdropDuration = 150
+hideBarsDelay = 6000
+closable = 1
+loop = 1
+escKey = 1
+keyPress = 1
+controls = 1
+slideEndAnimation = 1
+hideControlOnEnd = 0
+mousewheel = 1
+preload = 3
+showAfterLoad = 1
+download = 0
+counter = 1
+swipeThreshold = 50
+enableDrag = 1
+enableTouch = 1
+thumbnail = 1
+animateThumb = 1
+currentPagerPosition = "middle"
+thumbWidth = 100
+thumbContHeight = 100
+thumbMargin = 5
+toogleThumb = 1
+enableThumbDrag = 1
+enableThumbSwipe = 1
+thumbSwipeThreshold = 50
+autoplay = 1
+pause = 5000
+progressBar = 1
+forceAutoplay = 0
+autoplayControls = 1
+fullScreen = 1
+pager = 0
+zoom = 1
+scale = 1
+
+[account]
+paramCode = "code"
+forceSecure = 0
+
+[session]
+security = "all"
 ==
-{% partial 'template/intro'  %}
-
-{% if false == user %}
-  {% partial 'template/navbar' %}
-
-{% partial 'template/program'  %}
-{% partial 'template/locations'  %}
-{% partial 'template/speakers'  %}
-{% partial 'template/dresscode'    %}
-        {% partial 'template/gifts' %}
-        {% partial 'template/honeymoon' %}
-        {% partial 'template/witnesses' %}
+{% partial 'template/intro' %} 
+{% if  user %} 
+        {% partial 'template/navbar' %} 
+        {% partial 'template/gallery' %} 
+        {% partial 'template/program' %} 
+        {% partial 'template/locations' %} 
+        {% partial 'template/dresscode' %} 
+        {% partial 'template/gifts' %} 
+        {% partial 'template/honeymoon' %} 
+        {% partial 'template/witnesses' %} 
         {% partial 'template/footer' %}
 
-    {% if this.theme.settings_gotop %}
-        <a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
-    {% endif %}
+        <a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a> 
 {% endif %}
+
+
+                
+{% component 'session' %}
